[metadata]
name = pywebflowerlibpackage
version = 1.1.2
author = flower
author_email = egphilippov@gmail.com
description = flower's pywebflowerlibpackage
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/asmexcaliburwoods/pywebflowerlib
project_urls =
    Bug Tracker = https://github.com/asmexcaliburwoods/pywebflowerlib/issues
    Flower Growth Extension Site = https://github.com/asmexcaliburwoods
    PyPi Profile = https://pypi.org/user/flower/
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
